--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.new2"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -24,6 +24,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     compile 'eu.chainfire:libsuperuser:1.0.0.+'
+    def androidX = '1.0.0'
+    def latestVersion = '1.2.0'
+    implementation 'com.mikepenz:fastadapter:3.3.1'
+    implementation "androidx.recyclerview:recyclerview:${androidX}"
+    implementation 'com.mikepenz:fastadapter-extensions-expandable:3.3.1'
+    //The tiny Materialize library used for its useful helper classes
+    implementation "com.mikepenz:materialize:${latestVersion}" // at least 1.2.0
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
